# gau2grid

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  appveyor.yml  make_source.py  setup.cfg  setup.py
cmake/: gau2gridConfig.cmake.in
devtools/: README.md
devtools/conda-envs/: base.yaml
devtools/travis-ci/: before_install.sh
docs/: Makefile
docs/source/: c_api.rst  c_example.rst  c_install.rst  conf.py  index.rst  order.rst  py_api.rst  py_example.rst  py_install.rst
gau2grid/: RSH.py  RSH_data.pkl  __init__.py  _version.py  c_generator.py  c_pragma.py  c_util_generator.py  c_wrapper.py  codegen.py  docs.py  docs_generator.py  extras.py  generator.py  np_generator.py  order.py  python_reference.py  utility.py
gau2grid/data/: rsh_coeffs.npz  rsh_coeffs.pkl
gau2grid/tests/: ref_basis.py  test_c_code.py  test_c_generator.py  test_helper.py  test_np_generator.py  test_order.py  test_rsh.py
scratch/: collocation_vectorization.py
scripts/: make_release_sources.py  rsh_coef_gen.py  time_compare.py
tests/: addons.py  generator.py  ref_basis.py  test_c_code.py  test_c_generator.py  test_collocation.py  test_helper.py  test_np_generator.py  test_psi_collocation.py  test_psi_reference.py  test_rsh.py  test_speed.py  test_speed_deriv.py
